# minesweeper

./: .gitignore  CMakeLists.txt  README.md  board.cpp  cell.cpp  game.cpp  main.cpp  timer.cpp
include/: board.hpp  cell.hpp  counter.hpp  game.hpp  timer.hpp
src/: board.cpp  config.hpp  counter.cpp  game.cpp  main.cpp  timer.cpp
